; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_audio.c_process_audio.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/process_keycode/extr_process_audio.c_process_audio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@AU_ON = common dso_local global i64 0, align 8
@AU_OFF = common dso_local global i64 0, align 8
@AU_TOG = common dso_local global i64 0, align 8
@MUV_IN = common dso_local global i64 0, align 8
@voice_change_song = common dso_local global i32 0, align 4
@MUV_DE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @process_audio(i64 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @AU_ON, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %17

9:                                                ; preds = %2
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %9
  %16 = call i32 (...) @audio_on()
  store i32 0, i32* %3, align 4
  br label %76

17:                                               ; preds = %9, %2
  %18 = load i64, i64* %4, align 8
  %19 = load i64, i64* @AU_OFF, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %29

21:                                               ; preds = %17
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %21
  %28 = call i32 (...) @audio_off()
  store i32 0, i32* %3, align 4
  br label %76

29:                                               ; preds = %21, %17
  %30 = load i64, i64* %4, align 8
  %31 = load i64, i64* @AU_TOG, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %47

33:                                               ; preds = %29
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %35 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %33
  %40 = call i64 (...) @is_audio_on()
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %42, label %44

42:                                               ; preds = %39
  %43 = call i32 (...) @audio_off()
  br label %46

44:                                               ; preds = %39
  %45 = call i32 (...) @audio_on()
  br label %46

46:                                               ; preds = %44, %42
  store i32 0, i32* %3, align 4
  br label %76

47:                                               ; preds = %33, %29
  %48 = load i64, i64* %4, align 8
  %49 = load i64, i64* @MUV_IN, align 8
  %50 = icmp eq i64 %48, %49
  br i1 %50, label %51, label %61

51:                                               ; preds = %47
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 0
  %55 = load i64, i64* %54, align 8
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %61

57:                                               ; preds = %51
  %58 = call i32 (...) @voice_iterate()
  %59 = load i32, i32* @voice_change_song, align 4
  %60 = call i32 @PLAY_SONG(i32 %59)
  store i32 0, i32* %3, align 4
  br label %76

61:                                               ; preds = %51, %47
  %62 = load i64, i64* %4, align 8
  %63 = load i64, i64* @MUV_DE, align 8
  %64 = icmp eq i64 %62, %63
  br i1 %64, label %65, label %75

65:                                               ; preds = %61
  %66 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %67 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = icmp ne i64 %69, 0
  br i1 %70, label %71, label %75

71:                                               ; preds = %65
  %72 = call i32 (...) @voice_deiterate()
  %73 = load i32, i32* @voice_change_song, align 4
  %74 = call i32 @PLAY_SONG(i32 %73)
  store i32 0, i32* %3, align 4
  br label %76

75:                                               ; preds = %65, %61
  store i32 1, i32* %3, align 4
  br label %76

76:                                               ; preds = %75, %71, %57, %46, %27, %15
  %77 = load i32, i32* %3, align 4
  ret i32 %77
}

declare dso_local i32 @audio_on(...) #1

declare dso_local i32 @audio_off(...) #1

declare dso_local i64 @is_audio_on(...) #1

declare dso_local i32 @voice_iterate(...) #1

declare dso_local i32 @PLAY_SONG(i32) #1

declare dso_local i32 @voice_deiterate(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
